Disable preview features because Java... Traditionally, preview features could be used experimentally, but Gradle keeps updating the project without preview features enabled (like records). To make things easier, knowing what records will look like is enough, but we're using the newest technologies available as is.
Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>